--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://crypto-server-nparooei.herokuapp.com/"
+  "proxy": "http://localhost:5000"
 }
